# blender-extension-template

./: README.md  config.yml  pyproject.toml
src/my_example_extension/: __init__.py  ops.py  ui.py
